# purify

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYING  Doxyfile.in  README.md  bench_purify.cpp  purify.cpp  purify.hpp  purify.py  purify_bppp.hpp  purify_bppp_bridge.c  purify_runtime.hpp
.github/workflows/: ci.yml  pages.yml  vendor-tags.yml
bench/: bench_purify.cpp
cli/: main.cpp  purify_runtime.hpp
cmake/: purifyConfig.cmake.in
contrib/: vendor.sh
docs/paper/: build.sh  purify-paper.tex
fuzz/: purify_fuzz.cpp
include/: purify.h  purify.hpp  purify_bppp.hpp  purify_secp_bridge.h
include/purify/: api.hpp  bppp.hpp  bulletproof.hpp  common.hpp  curve.hpp  error.hpp  expected.hpp  expr.hpp  numeric.hpp  puresign.hpp  puresign_legacy.hpp  puresign_plusplus.hpp  secp_bridge.h  secp_context.h  secret.hpp  uint.h
include/purify/puresign/: bppp.hpp  legacy.hpp
patches/reference_purify/: patch_0001_tagged_hash_mode.patch
reference/: README.md  prove_py.assn
site/: build-pages-site.sh  doxygen-awesome-custom.css
site/static/: index.html  styles.css
site/static/paper/: index.html
src/: purify.hpp  purify_api.cpp  purify_bppp.cpp  purify_bppp.hpp  purify_bppp_bridge.c  purify_bppp_bridge.h  purify_bulletproof.cpp  purify_bulletproof_internal.hpp  purify_c_api.cpp  purify_core.c  purify_curve.cpp  purify_curve_core.c  purify_curve_core.h  purify_expr.cpp  purify_field.c  purify_numeric.cpp  purify_puresign.cpp  purify_puresign_internal.hpp  purify_puresign_plusplus.cpp  purify_runtime.hpp  purify_secp_bridge.h
src/api/: api.cpp  c_api.cpp  error_bridge.hpp  purify_api.cpp
src/bridge/: bppp_bridge.c  bppp_bridge.h  purify_bppp_bridge.c
src/core/: core.c  curve.c  curve.h  field.c  field.h  purify_core.h  purify_curve_core.c  purify_curve_core.h  purify_field.h  purify_uint.c  purify_uint_impl.h  uint.c  uint_impl.h
src/legacy_bulletproof/: circuit_compress_impl.h  circuit_impl.h  core.h  inner_product_impl.h  scratch_frames.c  util.h
src/protocol/: bppp.cpp  bulletproof.cpp  bulletproof_internal.hpp  expr.cpp  purify_bulletproof.cpp  purify_expr.cpp
src/puresign/: bppp.cpp  legacy.cpp
src/puresign/codecs/: bppp.cpp  legacy.cpp
src/puresign/detail/: common.hpp
src/purify/: api.hpp  bulletproof.hpp  common.hpp  curve.hpp  expr.hpp  numeric.hpp
src/support/: curve.cpp  numeric.cpp  purify_curve.cpp  purify_numeric.cpp
tests/: expected_tests.cpp  legacy_bulletproof_tests.cpp  public_header_hygiene_c_then_cpp.cpp  public_header_hygiene_cpp_then_c.cpp  puresign_tests.cpp  puresign_topic_proof_repro.cpp  purify_c_tests.c  purify_property_tests.cpp  purify_test_helpers.hpp  purify_tests.cpp  purify_tests_main.cpp  purify_valgrind_tests.c  reference_circuit_regression.py  test_harness.hpp
verification/cbmc/: README.md  common.h  core_validate_public_key_contract_harness.c  core_validate_secret_key_contract_harness.c  core_validation_helpers.h  curve_add_mixed_equivalence_harness.c  curve_affine_negate_contract_harness.c  curve_combine_formula_harness.c  curve_combine_point_average_harness.c  curve_double_in_place_harness.c  curve_encoding_helpers.h  curve_generator_order_contract_harness.c  curve_group_laws_harness.c  curve_hash_to_curve_contract_harness.c  curve_invalid_key_rejection_harness.c  curve_key_space_invariants_harness.c  curve_key_to_bits_roundtrip_harness.c  curve_lift_x_contract_harness.c  curve_model_helpers.h  curve_pack_public_roundtrip_harness.c  curve_secret_mul_checked_unchecked_equivalence_harness.c  curve_secret_mul_consistency_harness.c  curve_secret_mul_one_identity_harness.c  curve_secret_mul_zero_reject_harness.c  curve_unpack_public_inverse_harness.c  curve_unpack_secret_inverse_harness.c  curve_unpack_secret_roundtrip_harness.c  curve_unpack_secret_unchecked_roundtrip_harness.c  curve_valid_packed_secret_public1_derivation_equivalence_harness.c  curve_valid_packed_secret_public2_derivation_equivalence_harness.c  field_encoding_boundaries_harness.c  field_inverse_equivalence_harness.c  field_local_identities_harness.c  hash_to_curve_generator1_point_harness.c  hash_to_curve_generator2_point_harness.c  hash_to_curve_generator_points_harness.c  model_small_field_constants.h  run_cbmc.py  secp_bridge_small_field.c  u256_add_sub_inverse_harness.c  (+5 more)
